# Audio-clustering

./: .gitignore  Dockerfile  README.md  pyproject.toml  run_audio_clustering.py
.github/workflows/: ci.yml
conf/base/: catalog.yml  parameters.yml
scripts/: generate_demo_audio.py
src/audio_clustering/: __init__.py  pipeline_registry.py
src/audio_clustering/api/: main.py
src/audio_clustering/pipelines/clustering/: nodes.py  pipeline.py
src/audio_clustering/pipelines/data_ingestion/: nodes.py  pipeline.py
src/audio_clustering/pipelines/evaluation/: nodes.py  pipeline.py
src/audio_clustering/pipelines/feature_engineering/: nodes.py  pipeline.py
src/audio_clustering/pipelines/preprocessing/: nodes.py  pipeline.py
src/audio_clustering/pipelines/reporting/: nodes.py  pipeline.py
tests/: test_pipeline_contracts.py
