[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[project]
name = "audio_clustering"
version = "0.1.0"
description = "End-to-end unsupervised audio scene classification pipeline with Kedro, MLflow, and FastAPI"
requires-python = ">=3.11"
dependencies = [
    "kedro>=1.3",
    "kedro-datasets[pandas,matplotlib,pickle]",
    "kedro-mlflow",
    "mlflow>=2.0",
    "librosa>=0.10",
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "umap-learn>=0.5",
    "hdbscan>=0.8",
    "minisom>=2.3",
    "plotly>=5.0",
    "matplotlib>=3.7",
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "python-multipart",
    "soundfile>=0.12",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "ipykernel"]

[tool.kedro]
package_name = "audio_clustering"
project_name = "Audio Clustering"
kedro_init_version = "1.3.1"
tools = []
example_pipeline = false
source_dir = "src"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
addopts = "--tb=short"
testpaths = ["tests"]
